--- a/table.html
+++ b/table.html
@@ -1,14 +1,14 @@
 <html>
-    <body>
-        <h3>Actions</h3>
+
+<body>
+    <main>
         <section>
+            <h3>Actions</h3>
             <button type="button" disabled>Hit</button>
+            <button type="button">Stand</button>
+            <button type="button">Split</button>
         </section>
-        <section>
-            <button type="button" disabled>Stand</button>
-        </section>
-        <section>
-            <button type="button" disabled>Split</button>
-        </section>
-    </body>
+    </main>
+</body>
+
 </html>
